Fixed issues with weird z-index stacking

--- a/fc-web/src/CalendarNavigation/CalendarToolBar.css
+++ b/fc-web/src/CalendarNavigation/CalendarToolBar.css
@@ -8,7 +8,6 @@
   background-color: white;
   padding: 0px 10px 0px 10px;
   flex-wrap: wrap;
-  z-index: 50;
 }
 
 .calendar-toolbar-color{
