--- a/fc-web/src/ToolBar/ToolBar.css
+++ b/fc-web/src/ToolBar/ToolBar.css
@@ -8,6 +8,7 @@
   color: rgb(236, 236, 236);
   height: 34px;
   padding-right: 20px;
+  z-index: 10;
 }
 
 .top-bar div{
